# STERO

./: CMakeLists.txt  README.md  package.xml
data/3dmap/: mapa3d_1.ot  mapa3d_2.ot  mapa3d_3.ot  mapa3d_smiec.ot  szafka.ot  szafka2.ot  szafka3.ot
data/gazebo/worlds/: stoliki  stoliki.world  szafka.world  tables.world  tables2.world  tables_2.world  world_nowy.world  world_nowy_1.world  world_nowy_2.world  world_nowy_3.world
launch/: lab3.launch  map.launch  open_cabinet.launch  pick_place.launch  projekt2.launch  slam.launch  tiago_empty.launch  velma_stero_system.launch
maps/: dzialeczka.yaml  dzialeczka_cleared.yaml
rviz/: config.rviz  map.rviz  simple.rviz  velma_start.rviz
scripts/: open_cabinet.py  pick_place.py
src/: error_calculation.cpp  lab1.cpp  my_move_base.cpp
worlds/: dzialeczka.world  world_lab2.world
yaml/: global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml
