<package>
  <name>stero_manipulation</name>
  <version>1.0.1</version>
  <description>
    "opis"
  </description>
  <author email="witek.pietron@gmail.com"></author>
  <maintainer email="witek.pietron@gmail.com"></maintainer>

  <license>GNU v.2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosnode</run_depend> 
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>rtt_sensor_msgs</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rtt_std_msgs</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>std_srvs</run_depend> 
  <run_depend>rtt_std_srvs</run_depend> 
  <run_depend>rtt_barrett_hand_msgs</run_depend>
  <run_depend>velma_description</run_depend>
  <run_depend>velma_common</run_depend>
  <run_depend>barrett_hand_defs</run_depend>
  <run_depend>lwr_defs</run_depend>

</package>
